<resources>
    <string name="app_name">GuardLogger</string>
    <string name="employee_id">Employee ID</string>
    <string name="pin">PIN</string>
    <string name="guard_logger">Guard Logger</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_up_header">Sign Up</string>
    <string name="close">Close</string>
    <string name="full_name">Full Name</string>
    <string name="add_log">Add Log</string>
    <string name="add_new_log">Add New Log</string>
    <string name="start_time">Start Time</string>
    <string name="end_time">End Time</string>
    <string name="description">Description</string>
    <string name="save_log">Save Log</string>
    <string name="no_logs_available_yet">No logs available yet</string>
    <string name="log_details">Log Details</string>
    <string name="logged_by">Logged by: %s</string>
    <string name="reset">Reset</string>
    <string name="start">Start</string>
    <string name="finish">Finish</string>
    <string name="is_location_cleared">Is Location Cleared</string>
</resources>