<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".screens.login.MainActivity">

    <TextView
        android:id="@+id/tvLocationName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:textSize="24sp"
        tools:text="Engineering Dean's Office"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilStartTime"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:ems="10"
        android:hint="@string/start_time"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvLocationName">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etStartTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusableInTouchMode="false" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilEndTime"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        app:layout_constraintEnd_toEndOf="@+id/tilStartTime"
        app:layout_constraintStart_toStartOf="@+id/tilStartTime"
        app:layout_constraintTop_toBottomOf="@+id/tilStartTime"
        android:hint="@string/end_time"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etEndTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusableInTouchMode="false" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        app:layout_constraintEnd_toEndOf="@+id/tilEndTime"
        app:layout_constraintStart_toStartOf="@+id/tilEndTime"
        app:layout_constraintTop_toBottomOf="@+id/tilEndTime"
        android:hint="@string/description"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etLogs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            tools:text="asdasdasdasdasdasdasdsadasd asdasdjashdasdasdkjahs asjdha skdjhas dkja  kajshd akjsdh akjsdh akjsdh akjsd akjsdh kajshd ka"
            android:minLines="5"/>

    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/btnSaveLog"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/save_log"
        app:layout_constraintEnd_toEndOf="@+id/tilName"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/tilName"
        app:layout_constraintTop_toBottomOf="@+id/swIsCleared" />

    <Button
        android:id="@+id/btnClose"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/close"
        app:layout_constraintEnd_toEndOf="@+id/btnSaveLog"
        app:layout_constraintStart_toStartOf="@+id/btnSaveLog"
        app:layout_constraintTop_toBottomOf="@+id/btnSaveLog" />

    <Switch
        android:id="@+id/swIsCleared"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/is_location_cleared"
        app:layout_constraintEnd_toEndOf="@+id/tilName"
        app:layout_constraintTop_toBottomOf="@+id/tilName" />

</androidx.constraintlayout.widget.ConstraintLayout>